[package]
name = "reality_scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
piccolo = { git = "https://github.com/kyren/piccolo" }
flume = "0.11.1"
send_wrapper = "0.6.0"
anyhow = "1.0.92"

[features]
default = [
    "bevy/bevy_asset",
    # "bevy/bevy_task",
    "bevy/reflect_functions"
]
