[package]
name = "server_ao"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.37.0", features = ["bitflags"] }
ao_module = { path = "../../crates/ao_module" }
reality_kit = { path = "../..", features = ["server_ao"] }
reality_server_ao = { path = "../../crates/reality_server_ao" }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:server-ao"

[package.metadata.component.dependencies]

[patch.crates-io]
# https://github.com/elliotsayes/getrandom/tree/bevy-random-det
getrandom = { git = "https://github.com/elliotsayes/getrandom", branch = "bevy-random-det-0.2.15" }
