[package]
name = "server_ao"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.37.0", features = ["bitflags"] }
ao_module = { path = "../../crates/ao_module" }
reality_kit = { path = "../..", features = ["server_ao"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:server-ao"

[package.metadata.component.dependencies]
